Fix content auto creation issues following testing